--- a/stage0_API/render.yaml
+++ b/stage0_API/render.yaml
@@ -7,10 +7,11 @@ services:
     #   pip install -r requirements.txt
     #   python manage.py migrate
     #   python manage.py collectstatic --noinput
-    buildCommand: "./opt/render/project/src/manage.py migrate"
+    buildCommand: "pip install -r requirements.txt && python manage.py migrate"
     startCommand: gunicorn stage0_API.wsgi:application
 
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: "stage0_API.settings"
+    root: ./stage0_API
 
